News UAT/force-app/main/default/objects/Payment_Line_Item__c/Payment_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Payment Line Item</label>
    <nameField>
        <label>Payment Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>