News UAT/force-app/main/default/objects/Payment_Line_Item__c/fields/Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Basic_Price__c</fullName>
    <label>Basic Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>