News UAT/force-app/main/default/objects/Payment_Line_Item__c/fields/Configuration_ID__c.field-meta.xml
<CustomField>
    <fullName>Configuration_ID__c</fullName>
    <label>Configuration ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>