News UAT/force-app/main/default/objects/Payment_Line_Item__c/fields/Cost_Model__c.field-meta.xml
<CustomField>
    <fullName>Cost_Model__c</fullName>
    <label>Cost Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>