News UAT/force-app/main/default/objects/Payment_Line_Item__c/fields/News_Xtend_Product_Ref__c.field-meta.xml
<CustomField>
    <fullName>News_Xtend_Product_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>News Xtend Product Ref</label>
    <referenceTo>News_Xtend_Product_Ref__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>