News UAT/force-app/main/default/objects/Payment_Line_Item__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <referenceTo>Payment_Schedule__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>