News UAT/force-app/main/default/objects/Payment_Line_Item__c/fields/Product_Node__c.field-meta.xml
<CustomField>
    <fullName>Product_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Node</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>