News UAT/force-app/main/default/objects/Payment_Line_Item__c/fields/Site_Section_Group__c.field-meta.xml
<CustomField>
    <fullName>Site_Section_Group__c</fullName>
    <label>Site Section Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>