News UAT/force-app/main/default/objects/Payment_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Schedule__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>